Rota inscricoes usuario trazer mais dados
