# storage/api-docs/api-docs.json
@@ -857,7 +857,43 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/components/schemas/Inscricao"
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "evento_id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "usuario_id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "created_at": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2024-01-01 10:00:00",
+                                                        "nullable": true
+                                                    },
+                                                    "updated_at": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2024-01-01 10:00:00",
+                                                        "nullable": true
+                                                    },
+                                                    "tem_presenca": {
+                                                        "description": "true se tem presença registrada, false caso contrário",
+                                                        "type": "boolean",
+                                                        "example": true
+                                                    },
+                                                    "tem_certificado": {
+                                                        "description": "true se tem certificado gerado, false caso contrário",
+                                                        "type": "boolean",
+                                                        "example": true
+                                                    }
+                                                },
+                                                "type": "object"
                                             }
                                         }
                                     },
